tests/codegen/compile/view/fail/element_enum.rs
use rust_liveview::view::Element;

fn main() {}

#[derive(Debug, Element)]
enum EnumElement {
    Test,
}
