tests/codegen/compile/view/fail/element_enum.stderr
error: Unsupported shape `enum`

error: An error occured while parsing the input.
 --> $DIR/element_enum.rs:5:17
  |
5 | #[derive(Debug, Element)]
  |                 ^^^^^^^
